--- a/moneymanager/Dockerfile
+++ b/moneymanager/Dockerfile
@@ -1,5 +1,10 @@
+FROM eclipse-temurin:21-jdk AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM eclipse-temurin:21-jre
 WORKDIR /app
-COPY target/moneymanager-0.0.1-SNAPSHOT.jar moneymanager-v1.0.jar
-EXPOSE 9090
-ENTRYPOINT [ "java", "-jar", "moneymanager-v1.0.jar" ]
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java","-jar","app.jar"]
