--- a/moneymanager/src/main/resources/application-prod.properties
+++ b/moneymanager/src/main/resources/application-prod.properties
@@ -3,3 +3,4 @@ spring.config.import=optional:file:./env/env.properties
 spring.datasource.url=${RENDER_POSTGRE_URL}
 spring.datasource.username=${RENDER_POSTGRE_USERNAME}
 spring.datasource.password=${RENDER_POSTGRE_PASSWORD}
+logging.level.org.springframework.security=DEBUG
