--- a/moneymanager/src/main/resources/application.properties
+++ b/moneymanager/src/main/resources/application.properties
@@ -28,4 +28,8 @@ money.manager.frontend.url=${MONEY_MANAGER_FRONTEND_URL}
 
 app.activation.url=${MONEY_MANAGER_BACKEND_URL}
 
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
 spring.profiles.active=prod
