--- a/moneymanager/src/main/resources/application.properties
+++ b/moneymanager/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mail.host=smtp-relay.sendinblue.com
 spring.mail.port=587
 spring.mail.username=${SMTP_USERNAME}
-spring.mail.password = ${SMTP_PASSWORD}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties..mail.smtp.starttls.enable= true
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol = smtp
 spring.mail.properties.mail.smtp.from = ${SMTP_MAIL}
 
