--- a/moneymanager/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/moneymanager/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "app.activation.url",
     "type": "java.lang.String",
     "description": "A description for 'app.activation.url'"
+  },
+  {
+    "name": "brevo.api.key",
+    "type": "java.lang.String",
+    "description": "A description for 'brevo.api.key'"
   }
 ]}
