--- a/moneymanager/src/main/resources/application.properties
+++ b/moneymanager/src/main/resources/application.properties
@@ -1,35 +1,42 @@
 spring.config.import=optional:file:./env/env.properties
-#MySql Configuration
+
+# ===============================
+# Database Configuration
+# ===============================
 spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+# ===============================
+# Server
+# ===============================
 server.servlet.context-path=/api/v1.0
 
-#JPA Configuration
+# ===============================
+# JPA / Hibernate
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#Email configuration
-spring.mail.host=smtp-relay.sendinblue.com
-spring.mail.port=587
-spring.mail.username=${SMTP_USERNAME}
-spring.mail.password=${SMTP_PASSWORD}
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.protocol = smtp
-spring.mail.properties.mail.smtp.from = ${SMTP_MAIL}
+# ===============================
+# Email (Brevo HTTP API)
+# ===============================
+brevo.api.key=${BREVO_API_KEY}
+spring.mail.properties.mail.smtp.from=${SMTP_MAIL}
 
-#JWT Key
+# ===============================
+# JWT
+# ===============================
 jwt.secret.key=${JWT_SECRET_KEY}
 
+# ===============================
+# URLs
+# ===============================
 money.manager.frontend.url=${MONEY_MANAGER_FRONTEND_URL}
-
 app.activation.url=${MONEY_MANAGER_BACKEND_URL}
 
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-
+# ===============================
+# Profile
+# ===============================
 spring.profiles.active=prod
