Completed the project

--- a/moneymanager/src/main/resources/application.properties
+++ b/moneymanager/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.config.import=optional:file:./env/env.properties
+spring.config.import=optional:file:${user.dir}/moneymanager/env/env.properties
+
 
 # ===============================
 # Database Configuration
